2010-01-06  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.h (enum rx_cpu_type): Add RX200.
	(CC1_SPEC): Issue an error message if -mcpu=rx200 and -fpu are
	used together.
	(OVERRIDE_OPTIONS): Delete.
	(OPTIMIZATION_OPTIONS): Define.
	(ALLOW_RX_FPU_INSNS): Define only in terms of -fpu option.
	* config/rx/rx.c (rx_handle_option): Issue an error message if
	-mcpu=rx200 and -fpu are used together.
	(rx_set_optimization_options): New function.  Issue an error
	message if an optimization attribute attempts to reset the FPU/
	math optimization pairing.
	* config/rx/rx-protos.h (rx_set_optimization_options): Prototype.
	* config/rx/rx.opt: Set the default to 32-bit doubles.
	* config/rx/t-rx: Add multilibs for -nofpu option.
	* doc/invoke.texi: Update documentation of RX options.

2010-01-06  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-pre.c (name_to_id): New global.
	(alloc_expression_id): Simplify SSA name handling.
	(lookup_expression_id): Likewise.
	(init_pre): Zero name_to_id.
	(fini_pre): Free it.

2010-01-06  Uros Bizjak  <ubizjak@gmail.com>

	* ifcvt.c (if_convert): Output slim multiple dumps with TDF_SLIM.

2010-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/42542
	* config/i386/sse.md (smaxv2di3): New.
	(umaxv2di3): Likewise.
	(sminv2di3): Likewise.
	(uminv2di3): Likewise.

2010-01-05  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/42564
	* config/sparc/sparc.h (SPARC_SYMBOL_REF_TLS_P): Delete.
	* config/sparc/sparc-protos.h (legitimize_pic_address): Likewise.
	(legitimize_tls_address): Likewise.
	(sparc_tls_referenced_p): Likewise.
	* config/sparc/sparc.c (sparc_expand_move): Use legitimize_tls_address
	and adjust calls to legitimize_pic_address.
	(legitimate_constant_p) Use sparc_tls_referenced_p.
	(legitimate_pic_operand_p): Likewise.
	(sparc_legitimate_address_p): Do not use SPARC_SYMBOL_REF_TLS_P.
	(sparc_tls_symbol_ref_1): Delete.
	(sparc_tls_referenced_p): Make static, recognize specific patterns.