@@ -1,3 +1,7 @@
+2010-01-06  Richard Guenther  <rguenther@suse.de>
+
+	* gcc.c-torture/compile/pr42632.c: New testcase.
+
 2010-01-05  H.J. Lu  <hongjiu.lu@intel.com>
  
 	PR target/42542
